# mark

./: .env.example  .gitignore  Dockerfile  README.md  agent_config.json  pyproject.toml  run.ps1
src/mark/: agent.py
src/mark/lib/: apps.py  browser.py  coding.py  setup.py
src/mark/utils/: apps.py  config.py  editors.py  mappings.py  news.py  weather.py
